...
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text('Selected Date: ${selectedDate.toString()}'),

              DropdownButtonFormField<String>(
                decoration: const InputDecoration(labelText: 'Region'),
                key: const Key('chooseRegion'),
                value: _selectedRegion,

                onChanged: (String? newValue) {
                  setState(() {
                    _selectedRegion = newValue;
                    _selectedNumberParkingSpot=0;
...
                          return Colors.blueAccent;
                        }
                      },
                    ),
                  ),
                  onPressed: _returnFunction,
                  key: const Key('confirmButtonParking'),
                  child: const Text('Confirm parking spot'),
                ),
              ),
              // Center(
              //   child: isP1Visible
              //       ? Image.asset('images/p1.png')
...
              ),
              const Text('For ARRK we have:\n * P1 with all numbers, except for 42, which is reserved for motorcycles until 1 november. \n * P2 with numbers 23,24,43 and 44 \n * P3 the numbers between 14 and 41, except number 30, which is reserved for motorcycles and scooters.'),
              ElevatedButton(
                  onPressed: () {
                    _showImagePopup('images/p1.png');
                  },
                  key: const Key ('showP1'),
                  child: const Text('Show P1')),

              ElevatedButton(
                  onPressed: () {

                    _showImagePopup('images/p2.png');
                  },
                  key: const Key('showP2'),
                  child: const Text('Show P2')),
              ElevatedButton(
                  onPressed: () {
                    _showImagePopup('images/p3.png');
                  },
                key: const Key('showP3'),
                  child: const Text('Show P3'),
              ),
              ElevatedButton(
                onPressed: () {
                  _showImagePopup('images/p3Details.png');
                },
                key:const Key('detailP3'),
                child: const Text('Show Detail P3'),
              ),
              const Text(
                style: TextStyle(color: Colors.yellowAccent),
                'Observation: If you make a parking reservation, and the spot is not free then, try to park in other spot, until this app will be used by all employees from ARRK.'
              ),
...
