...
        builder: (BuildContext context) {
          return AlertDialog(
            title: Text('Success'),
            content: Text('Your reservation was confirmed ' + _employeeName),
            actions: <Widget>[
              TextButton(
                key: Key('confirmedButton'),
                child: Text('OK'),
                onPressed: () {
                  Navigator.of(context).pop();
                },
              ),
            ],
          );
...
              //       _selectedSection = value!;
              //     });
              //     _fetchNumberOfReservations();
              //   },
              //   items: const [
              //     DropdownMenuItem(
              //       key: Key('selectFloor'),
              //       value: '5',
              //       child: Text('5'),
              //     ),
              //     DropdownMenuItem(
              //       value: '6',
              //       child: Text('6'),
...
                            style: TextStyle(fontSize: screenSize.width / 22),
                          ),
                          ElevatedButton(
                            onPressed: () {
                              _showDatePicker();
                            },
                            key: const Key('chooseDate'),
                            child: Text(
                              'Choose Date',
                              style: TextStyle(
                                  fontSize: screenSize.width /
                                      20), // Adjust the font size as needed
                            ),
...
              //     //         backgroundColor: MaterialStateProperty.all<Color>(
              //     //             AppColors.kBlueColor),
              //     //       ),
              //     //       onPressed: () {
              //     //         _reserveParkingSpot();
              //     //       },
              //     //       key: const Key('reserveParkingSpot'),
              //     //       child: const Text('Reserve parking spot'),
              //     //     ),
              //     //     const SizedBox(
              //     //       width: 20,
              //     //     ),
              //     //     Text(_nrParkingSpot),
...
                    //   maxLength: 4,
                    //   onChanged: (value) {
                    //     if (value.length == 4) {
                    //       _confirmCode();
                    //     }
                    //   },
                    //   key: Key('enterDigitsCode'),
                    // ),
                    Text(
                      'Code entered: $_digitsEntered',
                      style: TextStyle(fontSize: screenSize.width / 25),
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        // ElevatedButton(
                        //   onPressed: () {
                        //     _confirmCode();
                        //   },
                        //   key: const Key('verifyCodeButton'),
                        //   child: const Text('Verify code'),
                        // ),
                        // const SizedBox(
                        //   width: 10,
                        // ),

...
                        }
                      },
                    ),
                  ),
                  child: Text(
                    'Confirm Reservation',
                    key: Key('confirmResButton'),
                    style: TextStyle(fontSize: screenSize.width / 20),
                  ),
                ),
              ),
              SizedBox(
                height: screenSize.height / 35,
...
