...
          ),
          DigitKeypad(
            onDigitEntered: onHandleDigits,
            buildContext: context,
            screenSize: screenSize,
            //add a key
            key: const Key('enterDigits'),
          ),
          SizedBox(
            // height: screenSize.height * 0.05,
          ),
          //
          //Text('qr read:  $_qrText' ),
...
          //     children: [
          //       ElevatedButton(
          //         style: ElevatedButton.styleFrom(
          //           minimumSize: Size(screenSize.width * 0.2, screenSize.height * 0.05),
          //         ),
          //         onPressed: _checkIn,
          //         key: const Key('checkinButton'),
          //         child: Padding(
          //           padding: EdgeInsets.all(screenSize.width * 0.03),
          //           child: Text(
          //             'Check-in',
          //             style: TextStyle(fontSize: screenSize.width * 0.07),
          //           ),
...
          //       ),
          //       ElevatedButton(
          //         style: ElevatedButton.styleFrom(
          //           minimumSize: Size(screenSize.width * 0.2, screenSize.height * 0.05),
          //         ),
          //         onPressed: _checkOut,
          //         key:const Key('checkoutButton'),
          //         child: Padding(
          //           padding: EdgeInsets.all(screenSize.width * 0.03),
          //           child: Text(
          //             'Check-out',
          //             style: TextStyle(fontSize: screenSize.width * 0.07),
          //           ),
...
