...

  @override
  void initState() {
    super.initState();
    CheckInTabState.clearDigits();
    _searchEmployeeController.addListener(searchEmployee); // Add listener
    searchEmployee(); // Trigger initial search
    _fetchManagers();
    _filteredEmployees = List.from(_employeesInOffice);
  }

  @override
  void dispose() {
...
