...
                onPressed: details.onStepContinue,
                style: ButtonStyle(
                  backgroundColor: reservationManager.verifyEmployeeCode
                      ? MaterialStateProperty.all(Colors.blue)
                      : MaterialStateProperty.all(Colors.grey),
                ),
                child: Text('Next',style: TextStyle(fontSize: isBigWidth?12:screenSize.width /24,color: Colors.white),),
              ),
            ),
          if (currentStep == 1)
            IgnorePointer(
              ignoring: !reservationManager.verifySelectedDate,
              child: ElevatedButton(
...
